--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.12",
+    "gulp-color": "0.0.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
     "gulp-contrib-copy": "^0.1.2",
+    "gulp-html-replace": "^1.6.1",
     "gulp-jshint": "^2.0.1",
     "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.2",
-    "jshint-stylish": "^2.2.1"
+    "jshint-stylish": "^2.2.1",
+    "pump": "^1.0.1",
+    "run-sequence": "^1.2.2"
   }
 }
