--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-connect": "^5.0.0",
     "gulp-contrib-copy": "^0.1.2",
     "gulp-html-replace": "^1.6.1",
+    "gulp-imagemin": "^3.0.3",
     "gulp-jshint": "^2.0.1",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
