--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "mgimenez",
   "license": "ISC",
   "devDependencies": {
+		"browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
@@ -20,6 +21,8 @@
     "gulp-html-replace": "^1.6.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-jshint": "^2.0.1",
+		"gulp-pug": "^3.2.0",
+    "gulp-pug-template-concat": "^1.0.0",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.2",
